--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,20 +2,45 @@
 
 
 
+/* @FONT FACE (enable the use of 'custom fonts' inside your document) */
+
+/* 
+  You can use 'fontsquirrel' (https://www.fontsquirrel.com) 
+  or 'transfonter' (https://transfonter.org)
+  to generate your own font for the web from .ttf or .oft files 
+*/
+
+@font-face {
+  font-family: 'Your Font Name';
+  src: url('../fonts/yourfontname/yourfontname-roman.woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+@font-face {
+  font-family: 'Your Font Name';
+  src: url('../fonts/yourfontname/yourfontname-italic.woff2');
+  font-weight: normal;
+  font-style: italic;
+  font-display: block;
+}
+
+
+
 /* VARIABLES */
 
 :root {
   /* Color values */
-  --color-background: rgba(200,200,200,1);
-  --color-block: rgba(255,255,255,1);
-  --color-text: rgba(0,0,0,1);
-  --color-text-link: rgba(0,0,255,0.8);
-  --color-text-link-hover: rgba(0,0,255,0.4);
+  --color-background: rgba(255, 255, 255, 1);
+  --color-text: rgba(0, 0, 0, 1);
+  --color-text-link: rgba(196, 196, 196, 0.8);
+  --color-text-link-hover: rgba(231, 231, 231, 0.4);
   /* Font values */
-  --font-family: 'Helvetica', 'Arial', sans-serif;
-  --font-size: 24px;
+  --font-family: 'Your Font Name', 'Helvetica', 'Arial', sans-serif;
+  --font-size: 45px;
   /* Margin value */
-  --margin: 1rem;
+  --margin: 2rem;
 }
 
 
@@ -29,13 +54,67 @@ html {
 }
 
 body {
-  position:relative;
+  position: relative;
   background-color: var(--color-background);
   font: var(--font-size) var(--font-family);
   color: var(--color-text);
-  width:100%;
-  height:auto;
-  overflow-y:auto;
+  text-transform: uppercase;
+  width: 100%;
+  height: auto;
+  overflow-y: auto;
+}
+
+img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+
+}
+
+a {
+  color: var(--color-text-link);
+  text-decoration: underline;
+}
+
+a:hover {
+  color: var(--color-text-link-hover);
+  text-decoration: underline;
+}
+
+
+h1 {
+  font: var(--font-size) var(--font-family);
+  /* h1 style */
+}
+
+h2 {
+  /* h2 style */
+}
+
+h3 {
+  /* h3 style */
+}
+
+h4,
+h5,
+h6 {
+  /* h4-h5-h6 style */
+}
+
+p {
+  /* paragraph style */
+}
+
+ol,
+ul {
+  /* ordered list and unordered list styles */
+}
+
+blockquote {
+  /* blockquote element style */
+}
+
+hr {
+  /* horizontal rule style */
 }
 
 
@@ -46,122 +125,21 @@ body {
 
 div.page-wrapper {
   /* the element that 'wraps' everything */
-  position: relative;
-  display: block;
-  float:left;
-  width:100%;
-  height:auto;
   padding: var(--margin);
-  background-color: darkgray;
-  box-sizing: border-box;
 }
 
-/* Do your work here... */
+/* navigation */
 
-main.layout-container {
-  position:relative;
-  display: block;
-  float:left;
-  width:100%;
-  height:auto;
-  background-color: black;
-  padding:1rem;
-  box-sizing: border-box;
-}
+nav {}
 
-.layout-block{
-  width:25%;
-  position:relative;
-  display:block;
-  float:left;
-  clear:right;
-  background-color: coral;
-  margin:0rem;
-  padding:0rem;
-}
+/* content */
 
-.layout-block p{
-  text-align:center;
-  margin:0;
-  padding:0;
-  background-color: orangered;
-}
+main {}
+
+summary {}
 
 
 
-/* color scheme blocks */
-
-.layout-block:nth-of-type(1){
-  width:25%;
-  height:100px;
-  opacity:1;
-}
-
-.layout-block:nth-of-type(2){
-  width:50vmin;
-  height:100px;
-  opacity:0.8;
-}
-
-.layout-block:nth-of-type(3){
-  width:25%;
-  height:100px;
-  opacity:0.6;
-}
-
-.layout-block:nth-of-type(4){
-  width:25%;
-  height:25vh;
-  opacity:0.5;
-}
-
-.layout-block:nth-of-type(5){
-  width:25%;
-  height:100px;
-  opacity:0.4;
-}
-
-.layout-block:nth-of-type(6){
-  width:25%;
-  height:100px;
-  opacity:1;
-}
-
-.layout-block:nth-of-type(7){
-  width:25%;
-  height:100px;
-  opacity:0.8;
-}
-
-.layout-block:nth-of-type(8){
-  width:25%;
-  height:100px;
-  opacity:0.6;
-}
-
-.layout-block:nth-of-type(9){
-  width:25%;
-  height:100px;
-  opacity:0.5;
-}
-
-.layout-block:nth-of-type(10){
-  width:25%;
-  height:100px;
-  opacity:0.4;
-}
-
-.layout-block:nth-of-type(11){
-  width:25%;
-  height:100px;
-  opacity:1;
-}
-
-.layout-block:nth-of-type(12){
-  width:25%;
-  height:100px;
-  opacity:0.8;
-}
 
 
 
@@ -179,6 +157,8 @@ main.layout-container {
 
 
 
+
+
 /* WEBSITE MEDIA QUERIES */
 
 /* styles for 'mobile', screen sizes up to 779px, should covers 'mobile' and 'tablet' */
@@ -192,16 +172,42 @@ main.layout-container {
 
   /* utility classes, mobile */
 
-  .desktop-only{
-    display:none;
+  .desktop-only {
+    display: none;
   }
 
-  .mobile-only{
-    display:block;
+  .mobile-only {
+    display: block;
   }
 
 }
 
 
 
+/* use this query to apply style changes to smaller smartphones sizes (like an iPhone 5S or SE 2016), max size of 339px */
 
+@media (max-width: 339px) {
+
+  /* your overriding css properties here */
+
+}
+
+
+
+/* use this query to apply style changes for 'mobile' screen sizes that are flipped in 'landscape' mode */
+
+@media (max-width: 779px) and (orientation: landscape) {
+
+  /* your overriding css properties here */
+
+}
+
+
+
+/* use this query to apply style for 'small' desktop screens */
+
+@media (min-width: 780px) and (max-width: 992px) {
+
+  /* your overriding css properties here */
+
+}
