--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -7,7 +7,7 @@
   --color-text-link: rgba(0,0,255,0.8);
   --color-text-link-hover: rgba(0,0,255,0.4); */
   /* Font settings */
-  --font-family: 'Helvetica', sans serif;
+  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --font-size: 24px;
   /* Margins settings */
   --margin: 1rem;
