--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,19 @@
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap'); */
 
+@font-face {
+  font-family: "AlteHaasGrotesk";
+  src: url('assets/css/fonts/AlteHaasGrotesk.woff2') format("woff2"), /* Preferred format */
+       url('assets/css/fonts/AlteHaasGrotesk.woff') format("woff"),
+       url('assets/css/fonts/AlteHaasGrotesk.ttf') format("truetype");
+  /* Add additional font formats as needed for better browser compatibility */
+}
+
+@font-face {
+  font-family: "Roboto-Bold";
+  src: url('assets/css/fonts/Roboto-Bold.ttf') format("truetype");
+  /* Add additional font formats as needed for better browser compatibility */
+}
+
 :root {
   /* Color settings */
 
@@ -8,12 +22,19 @@
   --color-text-link-hover: rgba(0,0,255,0.4); */
   /* Font settings */
   --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-size: 24px;
+  --main-text-size: 21px;
+  --large-text-size: 70px;
+  --small-text-size: 14px;
   /* Margins settings */
-  --margin: 1rem;
+  /* --margin: 1rem; */
 }
 
- 
+
+
+* {
+  scrollbar-width: none;
+}
+
 h9 {
   font-style: italic;
 }
@@ -25,18 +46,16 @@ h11 {
 
 h10 {
   color: #ffffff;
-
 }
 
 
 h20 {
   color: #ffffff;
-
 }
 
 html, body {
   font-size: clamp( 20px, 2.25vw, 28px); 
-  font-family: var(--font-family);
+  font-family: 'Helvetica Neue', sans-serif;
 
 	-webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
@@ -85,7 +104,6 @@ main {
 }
 
 
-
 /* menu button *//* menu button *//* menu button */
             #navbar {
                 position: fixed;
@@ -97,7 +115,7 @@ main {
                 height: 100vh;
                 /* overflow: hidden; */
                 z-index: 111111;
-                font-family: 'Helvetica', sans serif;
+                font-family: 'Helvetica Neue', sans-serif;
                 background: #0055ff;
                 line-height: 60%;
                 overflow-y: auto;
@@ -134,6 +152,7 @@ main {
             #navbar.closed > a.toggle:after {
               content: 'THANKS TO';
               font-size: 0.8em;
+              font-weight: 400;
               color: black;
               mix-blend-mode: difference;
               background-color: #DDFF00;
@@ -148,7 +167,7 @@ main {
               margin-right: 1rem;
               text-decoration: none;
               background-color: transparent;
-              font-family: 'Helvetica', sans serif;
+              font-family: 'Helvetica Neue', sans-serif;
               font-size: 0.6em;
               line-height: 38px;
               font-weight: 500;
@@ -164,17 +183,18 @@ main {
 /* menu button *//* menu button *//* menu button */
 
 .title{
+  font: AlteHaasGrotesk;
   font-size: 4rem;
-  font-weight: bold;
   text-transform: uppercase;
   color: #c20707;
   background-color: #FF1200;
   height: 100vh;
-  padding-top: 300px;
+  padding-top: 30px;
+  padding-left: 30px;
   padding-bottom: 100vh;
   line-height: 110px;
   position: relative;
-  text-align: center;
+  text-align: left;
 
 }
 
@@ -194,7 +214,7 @@ main {
 } */
 
 #site-navigation{
-  font-family: 'Helvetica', sans serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 3.5em;
   line-height: 100%;
 }
@@ -254,13 +274,12 @@ section.section-text-block{
   width: 100%;
   height:auto;
   border: none;
-  font-family: 'Helvetica', sans serif;
+  font-family: 'Helvetica Neue', sans-serif;
   margin-top: 50vh;
   color: #ff0000;
   widows: 3;
 
 }
-
 
 section.section-text-block.order-reversed{
   flex-direction:row-reverse;
@@ -310,63 +329,17 @@ section.section-text-block .subsection{
 
 
 
-
-
 @media (max-width: 600px) {
-main {
-  scroll-padding-top: 12px;
-}
-  .title {
-    font-size: min(10vw);
-    
-    line-height: 1.2;
-  }
-  section.section-text-block {
-    margin-right: 0; /* 10%; */
-    flex-direction: column;
-    position:relative;
-  }
-
-  section.section-text-block.order-reversed {
-
-    flex-direction: column-reverse;
-  }
-
-  section.section-text-block a {
-    /* color: lime */
-  }
-
-  section.section-text-block .subsection{
-    font-size: 14px;
-    overflow-y: auto;
-    width:100%;
-    padding: 1rem;
-    padding-right: 120px;
-    box-sizing: border-box;
-  }
-
-  #navbar {
-    height: 100vh;
-  }
-}
-
-.end{
-  
-}
-
-/* @media screen and ( max-width: 600px ) {
-  #navbar { width: 100% }
-} */
-
-@media (max-width: 600px) {
-  .title {
+  .body {
     font-size: min(7vw, 4rem); /* Adjust title font size for smaller screens */
     padding-top: 750px; /* Adjust padding top for smaller screens */
     /* padding-bottom: 50px; Adjust padding bottom for smaller screens */
   }
 
-  .content {
-    padding: 0px; /* Adjust content padding for smaller screens */
+  #site-navigation{
+    margin-left: -1rem;
+    font-size: 3.5em;
+    line-height: 110%;
   }
 
   #navbar {
@@ -374,13 +347,17 @@ main {
     height: 100vh; /* Adjust height for smaller screens */
     text-align: left;
     font-size: 0.6em;
-
   }
-
+  .subsection-is-main {
+    max-width: 200vw;
+    line-height: 1.5;
+    font-size: 0.55em;
+    background-color: none;
+  }
   section.section-text-block {
     margin-right: 0;
     flex-direction: column;
-    position: relative;
+    position: relative;  
   }
 
   section.section-text-block.order-reversed {
