--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -9,10 +9,29 @@
 }
 
 @font-face {
-  font-family: "Roboto-Bold";
-  src: url('assets/css/fonts/Roboto-Bold.ttf') format("truetype");
+  font-family: "Telegraf-UltraBold";
+  src: url('assets/css/fonts/Telegraf-UltraBold.woff2') format("woff2"), /* Preferred format */
+       url('assets/css/fonts/Telegraf-UltraBold.woff') format("woff"),
+       url('assets/css/fonts/Telegraf-UltraBold.ttf') format("truetype");
   /* Add additional font formats as needed for better browser compatibility */
 }
+
+@font-face {
+  font-family: "Telegraf-Regular";
+  src: url('assets/css/fonts/Telegraf-Regular.woff2') format("woff2"), /* Preferred format */
+       url('assets/css/fonts/Telegraf-Regular.woff') format("woff"),
+       url('assets/css/fonts/Telegraf-Regular.ttf') format("truetype");
+  /* Add additional font formats as needed for better browser compatibility */
+}
+
+@font-face {
+  font-family: "Telegraf-UltraLight";
+  src: url('assets/css/fonts/Telegraf-UltraLight.woff2') format("woff2"), /* Preferred format */
+       url('assets/css/fonts/Telegraf-UltraLight.woff') format("woff"),
+       url('assets/css/fonts/Telegraf-UltraLight.ttf') format("truetype");
+  /* Add additional font formats as needed for better browser compatibility */
+}
+
 
 :root {
   /* Color settings */
@@ -21,7 +40,6 @@
   --color-text-link: rgba(0,0,255,0.8);
   --color-text-link-hover: rgba(0,0,255,0.4); */
   /* Font settings */
-  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   --main-text-size: 21px;
   --large-text-size: 70px;
   --small-text-size: 14px;
@@ -35,9 +53,6 @@
   scrollbar-width: none;
 }
 
-h9 {
-  font-style: italic;
-}
 
 h11 {
   font-style: italic;
@@ -53,12 +68,17 @@ h20 {
   color: #ffffff;
 }
 
+h2 {
+  font-size: 80px;
+}
+
+
 html, body {
   font-size: clamp( 20px, 2.25vw, 28px); 
-  font-family: 'Helvetica Neue', sans-serif;
 
 	-webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  
 }
 
 * {
@@ -72,21 +92,7 @@ body{
   /* transition: background-color 0.5s ease; Smooth transition */
 }
 
-/* .section1 {
-  background-color: #ff0000;
-}
 
-.section2 {
-  background-color: #0008ff;
-}
-
-.section3 {
-  background-color: rgb(26, 255, 0);
-}
-
-.section4 {
-  background-color: rgb(166, 0, 136);
-} */
 
 main {
   position: fixed;
@@ -183,8 +189,8 @@ main {
 /* menu button *//* menu button *//* menu button */
 
 .title{
-  font: AlteHaasGrotesk;
-  font-size: 4rem;
+  font-family: Telegraf-UltraBold;
+  font-size: 6rem;
   text-transform: uppercase;
   color: #c20707;
   background-color: #FF1200;
@@ -192,7 +198,7 @@ main {
   padding-top: 30px;
   padding-left: 30px;
   padding-bottom: 100vh;
-  line-height: 110px;
+  line-height: 140px;
   position: relative;
   text-align: left;
 
@@ -214,8 +220,8 @@ main {
 } */
 
 #site-navigation{
-  font-family: 'Helvetica Neue', sans-serif;
-  font-size: 3.5em;
+  font-family: Telegraf-regular;
+  font-size: 3.2em;
   line-height: 100%;
 }
 
@@ -274,7 +280,7 @@ section.section-text-block{
   width: 100%;
   height:auto;
   border: none;
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: Telegraf-Regular;
   margin-top: 50vh;
   color: #ff0000;
   widows: 3;
@@ -319,13 +325,10 @@ section.section-text-block .subsection{
   /* align-items: center; */
 }
 
-.subsection-is-journal p{
-  margin-left: 5%;
-  width: 90%;
+
+.footer {
+  margin-bottom: 150px; /* Adjust the value as needed */
 }
-
-
-
 
 
 
@@ -354,6 +357,7 @@ section.section-text-block .subsection{
     font-size: 0.55em;
     background-color: none;
   }
+
   section.section-text-block {
     margin-right: 0;
     flex-direction: column;
@@ -370,6 +374,7 @@ section.section-text-block .subsection{
     box-sizing: border-box;
   }
 }
+
 
 
 
