--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -45,9 +45,9 @@
   --color-text-link: rgba(0,0,255,0.8);
   --color-text-link-hover: rgba(0,0,255,0.4); */
   /* Font settings */
-  --main-text-size: 21px;
-  --large-text-size: 70px;
-  --small-text-size: 14px;
+  --main-text-size: 18px;
+  --large-text-size: 68px;
+  --small-text-size: 12px;
   /* Margins settings */
   /* --margin: 1rem; */
 }
@@ -371,13 +371,27 @@ section.section-text-block .subsection{
   margin-bottom: 150px; /* Adjust the value as needed */
 }
 
+.container {
+  width: 100%; /* Occupy full width by default */
+  max-width: 600px; /* Set maximum width */
+  margin: 0 auto; /* Center the container */
+}
 
 
 @media (max-width: 600px) {
+
+
+  .container {
+      max-width: 100%; /* Override maximum width to occupy full width */
+
+    }
+
+
   .body {
     font-size: min(7vw, 4rem); /* Adjust title font size for smaller screens */
     padding-top: 750px; /* Adjust padding top for smaller screens */
     /* padding-bottom: 50px; Adjust padding bottom for smaller screens */
+    
   }
 
   #site-navigation{
@@ -389,10 +403,15 @@ section.section-text-block .subsection{
   #navbar {
     position: fixed;
     height: 100vh; /* Adjust height for smaller screens */
+    width: 100%;
     text-align: left;
     font-size: 0.6em;
+    margin-right: 10px;
   }
-  .subsection-is-main {
+
+  
+      
+    .subsection-is-main {
     max-width: 200vw;
     line-height: 1.5;
     font-size: 0.55em;
