--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -109,7 +109,8 @@ h20 {
 }
 
 h2 {
-  font-size: 80px;
+  margin-top: -3px;
+  font-size: 70px;
   font-family: "AlteHaasGrotesk",sans-serif;
 
 }
@@ -130,7 +131,7 @@ box-sizing: border-box;
 
 body{
   background-color: #a9bbcf; 
-  font-size: 14px;
+  /* font-size: 10px; */
   /* transition: background-color 0.5s ease; Smooth transition */
 }
 
@@ -193,7 +194,7 @@ main {
             }
             #navbar > a.toggle:after {
               content: 'CLOSE';
-              font-size: 1.4rem;
+              font-size: 1.1rem;
               margin: 1px;
               font-family: "AlteHaasGrotesk",sans-serif;
               font-size: 1.2rem;
@@ -203,7 +204,7 @@ main {
             #navbar.closed > a.toggle:after {
               content: 'THANKS TO';
               font-family: "AlteHaasGrotesk",sans-serif;
-              font-size: 1.4rem;
+              font-size: 1.1rem;
               color: black;
               mix-blend-mode: difference;
               background-color: #DDFF00;
@@ -219,10 +220,9 @@ main {
               text-decoration: none;
               background-color: transparent;
               font-family: "AlteHaasGrotesk",sans-serif;
-              font-size: 3.8rem;
-              line-height: 62px;
+              font-size: 3rem;
+              line-height: 50px;
               font-weight: 500;
-              margin-bottom: 20px;
             }
             #navbar a:hover {
               /* background-color:#eee9dc; */
@@ -236,7 +236,7 @@ main {
 
 .title{
   font-family: "AlteHaasGrotesk",sans-serif;
-  font-size: 12rem;
+  font-size: 9.5rem;
   text-transform: uppercase;
   color: #c20707;
   background-color: #FF1200;
@@ -244,7 +244,7 @@ main {
   padding-top: 30px;
   padding-left: 30px;
   padding-bottom: 100vh;
-  line-height: 155px;
+  line-height: 123px;
   position: relative;
   text-align: left;
 
@@ -272,8 +272,8 @@ main {
 #site-navigation{
   font-family: Helvetica, Arial, sans-serif;
   text-transform: uppercase;
-  font-size: 6rem;
-  line-height: 100%;
+  font-size: 4.5rem;
+  line-height: 70px;
 }
 
 #site-navigation a:hover {
@@ -283,16 +283,6 @@ main {
 
 
 
-/* ul{
-  color: #c20707;
-  display: block;
-  list-style-type: disc;
-  margin-block-start: 0px;
-  margin-block-end: 0px;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
-} */
 
 
 /* #site-navigation li:nth-of-type(4) a {
@@ -358,7 +348,7 @@ section.section-text-block .subsection{
 
 .subsection-is-main {
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   background-color: none;
 }
 
@@ -369,7 +359,7 @@ section.section-text-block .subsection{
   margin-right: 2rem;
   line-height: 1.5;
   padding-left: 10%;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #DDFF00;
   top:1rem;
   position: sticky;
@@ -393,12 +383,24 @@ section.section-text-block .subsection{
 
 @media (max-width: 600px) {
 
+  /* h2 {
+    font-size: 50px;
+    font-family: "AlteHaasGrotesk",sans-serif;
+  
+  } */
+
 
   .container {
       max-width: 100%; /* Override maximum width to occupy full width */
 
     }
 
+  .title{
+    font-size: 3rem;
+    margin: -2px;
+    line-height: 50px;
+    
+  }
 
   .body {
     font-size: min(7vw, 4rem); /* Adjust title font size for smaller screens */
@@ -408,8 +410,8 @@ section.section-text-block .subsection{
   }
 
   #site-navigation{
-    margin-left: -1rem;
-    font-size: 3.5em;
+    margin-left: -1%;
+    font-size: 2rem;
     line-height: 110%;
   }
 
@@ -417,10 +419,19 @@ section.section-text-block .subsection{
     position: fixed;
     height: 100vh; /* Adjust height for smaller screens */
     width: 100%;
-    text-align: left;
-    font-size: 0.6em;
+    padding-right: 20%;
+    padding-left: -20%;
   
   } 
+
+  #list-style-type {
+    padding: none;
+  }
+
+  ul {
+    padding: none;
+
+  }
   
   #navbar a {
     /* float: left; */
@@ -431,7 +442,7 @@ section.section-text-block .subsection{
     text-decoration: none;
     background-color: transparent;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 0.6em;
+    font-size: 1.5rem;
     line-height: 38px;
     font-weight: 500;
   }
