--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -59,7 +59,7 @@
 } */
 
 ::-webkit-scrollbar {
-  width: 14px; /* Width of the scrollbar */
+  width: 13px; /* Width of the scrollbar */
 }
 
 /* Track */
@@ -116,6 +116,8 @@ h2 {
 }
 
 
+
+
 html, body {
   /* font-size: clamp( 20px, 2.25vw, 28px);  */
 
@@ -159,15 +161,13 @@ main {
                 top:0;
                 right:0;
                 width: 50%;
-                padding-right: 3%;
-                padding-top: 3.5%;
+              
                 height: 100vh;
                 /* overflow: hidden; */
                 z-index: 111111;
-                font-family: Helvetica, Arial, sans-serif;
                 background: #0055ff;
-                line-height: 60%;
                 overflow-y: auto;
+                padding: 3rem;
             }
 
             #navbar ul {
@@ -209,6 +209,7 @@ main {
               mix-blend-mode: difference;
               background-color: #DDFF00;
               padding: 0.4rem;
+              margin-right: 1rem;
             }
 
             #navbar a {
@@ -216,14 +217,11 @@ main {
               /* display:inline; */
               color: #eee9dc;
               text-align: left;
-              margin-right: 1rem;
-              text-decoration: none;
-              background-color: transparent;
               font-family: "AlteHaasGrotesk",sans-serif;
               font-size: 3rem;
               line-height: 50px;
-              font-weight: 500;
             }
+
             #navbar a:hover {
               /* background-color:#eee9dc; */
               color: #ffffff;
@@ -235,10 +233,7 @@ main {
 /* menu button *//* menu button *//* menu button */
 
 .title{
-  font-family: "AlteHaasGrotesk",sans-serif;
-  font-size: 9.5rem;
-  text-transform: uppercase;
-  color: #c20707;
+
   background-color: #FF1200;
   height: 100vh;
   padding-top: 30px;
@@ -248,6 +243,15 @@ main {
   position: relative;
   text-align: left;
 
+}
+
+h1 {
+  font-family: "AlteHaasGrotesk",sans-serif;
+  font-size: 9.5rem;
+  text-transform: uppercase;
+  color: #c20707;
+
+  
 }
 
 .space {
@@ -319,6 +323,7 @@ section.section-text-block{
   display:flex;
   flex-direction:row;
   flex-wrap: nowrap;
+  gap: 1rem;
   align-items: flex-start;
   width: 100%;
   height:auto;
@@ -332,6 +337,7 @@ section.section-text-block{
 
 section.section-text-block.order-reversed{
   flex-direction:row-reverse;
+
 }
 
 section.section-text-block .subsection{
@@ -365,8 +371,15 @@ section.section-text-block .subsection{
   position: sticky;
   position: -webkit-sticky;
   display: flex;
+  
   /* justify-content: center; */
   /* align-items: center; */
+}
+
+.footnotes-list{
+  list-style: decimal;
+  margin-left: 1rem;
+  /* list-style-position: inside; */
 }
 
 
@@ -380,6 +393,30 @@ section.section-text-block .subsection{
   margin: 0 auto; /* Center the container */
 }
 
+blockquote {
+  margin: 1rem 4rem;
+}
+
+
+@media (orientation: portrait)
+{
+
+  /* ::before */
+  .title > h1 { 
+  
+    /* content: "Stored energy, bound to be released"; */
+    padding: none;
+    font-size: 5rem;
+    line-height: 1;
+    transform-origin: left bottom;
+    transform: rotate(90deg);
+    position: absolute;
+    top: -32%;
+    left: 5%;
+  }
+}
+
+
 
 @media (max-width: 600px) {
 
@@ -389,29 +426,19 @@ section.section-text-block .subsection{
   
   } */
 
-
-  .container {
+  /* .container {
       max-width: 100%; /* Override maximum width to occupy full width */
 
-    }
-
-  .title{
+  /* .title{
     font-size: 3rem;
     margin: -2px;
     line-height: 50px;
     
-  }
-
-  .body {
-    font-size: min(7vw, 4rem); /* Adjust title font size for smaller screens */
-    padding-top: 750px; /* Adjust padding top for smaller screens */
-    /* padding-bottom: 50px; Adjust padding bottom for smaller screens */
-    
-  }
+  } */
 
   #site-navigation{
     margin-left: -1%;
-    font-size: 2rem;
+    font-size: 2.4rem;
     line-height: 110%;
   }
 
@@ -424,15 +451,7 @@ section.section-text-block .subsection{
   
   } 
 
-  #list-style-type {
-    padding: none;
-  }
 
-  ul {
-    padding: none;
-
-  }
-  
   #navbar a {
     /* float: left; */
     /* display:inline; */
@@ -448,14 +467,8 @@ section.section-text-block .subsection{
   }
   
       
-    .subsection-is-main {
-    max-width: 200vw;
-    line-height: 1.5;
-    font-size: 0.55em;
-    background-color: none;
-  }
 
-  section.section-text-block {
+section.section-text-block {
     margin-right: 0;
     flex-direction: column;
     position: relative;  
